fix overlapping styles

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
   left: 0;
   width: 100%;
   height: 50%;
-  background-color: #f5ce00;
+  background-color: #ffd703e8;
   clip-path: polygon(0 0, 100% 0%, 100% 59%, 0 79%);
   height: 450px;
 }
@@ -84,7 +84,7 @@ h1 {
   font-size: 45px;
   padding-left: 50px;
 }
-p {
+.description {
   width: 80%;
   padding-left: 10px;
   font-size: 20px;
@@ -215,7 +215,7 @@ button {
       margin-top: 25px;
       margin-right: 0px;
   }
-  p {
+  .description {
     width: 100%;
     padding-left: 0px;
     text-align: center;
